--- a/eszter-site/src/App.css
+++ b/eszter-site/src/App.css
@@ -1,1 +1,34 @@
+.nav--container{
+    display: flex;
+    background-color: rgb(255, 255, 255);
+    align-items: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 75px;
+}
 
+.nav--header{
+    margin-left: 5%;
+}
+
+.nav--items{
+    display: flex;
+    gap: 30px;
+    list-style-type: none;
+    margin-left: auto;
+    margin-right: 10%;
+}
+
+.nav--item:hover{
+    text-decoration: underline 2px;
+    text-underline-offset: 5px;
+}
+
+
+
+.test--div{
+    width: 100%;
+    height: 800px;
+    
+}
