--- a/eszter-site/src/App.css
+++ b/eszter-site/src/App.css
@@ -1,23 +1,32 @@
+
+
 .nav--container{
     display: flex;
-    background-color: rgb(255, 255, 255);
     align-items: center;
     position: fixed;
     top: 0;
     width: 100%;
+    justify-content: center;
     height: 75px;
-}
-
-.nav--header{
-    margin-left: 5%;
+    
 }
 
 .nav--items{
     display: flex;
-    gap: 30px;
+    padding: 0px;
+    background-color: rgb(134, 134, 134);
+    width: 400px;
     list-style-type: none;
-    margin-left: auto;
-    margin-right: 10%;
+    gap: 30px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 45px;
+    height: 100%;
+    opacity: 60%;
+}
+
+
+.nav--item{
 }
 
 .nav--item:hover{
@@ -25,10 +34,27 @@
     text-underline-offset: 5px;
 }
 
+.header{
+    margin-top: 75px;
+    display: flex;
+    color: white;
+    font-size: 36px;
+    justify-content: center;
+}
+
+.home-container{
+    width: 100%;
+    height: 800px;  
+    background-image: url("../public/assets/home-banner.jpg");
+}
+
+.about-container{
+    width: 100%;
+    height: 800px;  
+}
 
 
 .test--div{
     width: 100%;
-    height: 800px;
-    
+    height: 800px;  
 }
