--- a/eszter-site/src/App.css
+++ b/eszter-site/src/App.css
@@ -50,9 +50,14 @@
 
 .about-container{
     width: 100%;
-    height: 800px;  
+    height: 600px;  
 }
 
+.eszter-photo{
+    border-radius: 100%;
+    width: 300px;
+    height: 300px;
+}
 
 .test--div{
     width: 100%;
