--- a/eszter-site/src/App.css
+++ b/eszter-site/src/App.css
@@ -51,12 +51,27 @@
 .about-container{
     width: 100%;
     height: 600px;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.about-content{
+    display: flex;
+    align-items: center;
+    width: 50%;
+    gap: 35px;
+}
+
+.bio{
+    width: 50%;
+    font-size: 22px;
 }
 
 .eszter-photo{
     border-radius: 100%;
-    width: 300px;
-    height: 300px;
+    width: 35%;
+    
 }
 
 .test--div{
