--- a/eszter-site/src/App.css
+++ b/eszter-site/src/App.css
@@ -74,7 +74,38 @@
     
 }
 
-.test--div{
+.event-results-container{
     width: 100%;
     height: 800px;  
+    background-color: rgb(53, 53, 53);
+}
+
+.contact-container{
+    width: 100%;
+    height: 800px;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact-form{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: left;
+}
+
+.input-small{
+    width: 30%;
+    height: 30px;
+}
+
+.input-large{
+    width: 50%;
+    height: 200px;
+}
+
+.submit{
+    width: 25%;
 }
