--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,10 @@
     width: 100%;
     height: 800px;  
     background-color: rgb(53, 53, 53);
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
 }
 
 .contact-container{
@@ -108,4 +112,27 @@
 
 .submit{
     width: 25%;
+}
+
+.event-card-container{
+    width: 20%;
+    height: 55%;
+    background-color: rgb(181, 181, 181);
+}
+
+.event-card-img{
+    width: 100%;
+}
+
+.event-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.event-name{
+    display: flex;
+    gap: 10px;
 }
