--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,14 @@
     width: 100%;
     justify-content: center;
     height: 75px;
+    margin-top: 10px;
     
 }
 
 .nav--items{
     display: flex;
     padding: 0px;
-    background-color: rgb(134, 134, 134);
+    background-color: #67F089;
     width: 400px;
     list-style-type: none;
     gap: 30px;
@@ -22,7 +23,7 @@
     justify-content: center;
     border-radius: 45px;
     height: 100%;
-    opacity: 60%;
+    opacity: 80%;
 }
 
 
@@ -54,30 +55,32 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #FFFFFF;
+    font-size: 26px;
 }
 
 .about-content{
-    display: flex;
-    align-items: center;
-    width: 50%;
-    gap: 35px;
+    width: 60%;
 }
 
 .bio{
-    width: 50%;
+    width: 60%;
     font-size: 22px;
+    display: inline;
 }
 
 .eszter-photo{
-    border-radius: 100%;
-    width: 35%;
+    border-radius: 80%;
+    width: 40%;
+    float: right;
+    display: inline;
     
 }
 
 .event-results-container{
     width: 100%;
     height: 800px;  
-    background-color: rgb(53, 53, 53);
+    background-color: #FFFFFF;
     display: flex;
     gap: 20px;
     align-items: center;
@@ -96,8 +99,8 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 30px;
-    align-items: left;
+    gap: 15px;
+    align-items: center;
 }
 
 .input-small{
@@ -110,14 +113,29 @@
     height: 200px;
 }
 
-.submit{
-    width: 25%;
-}
+.submit-btn {
+    height: 50px;
+    width: 200px;
+    background-color: white;
+    color: #6DE3CD;
+    border-color: #6DE3CD;
+    filter: drop-shadow(0px 1px 1px #6DE3CD);
+    color: #6DE3CD;
+    font-size: 18px;
+  
+  }
+  
+  .submit-btn:hover {
+    background-color: #6DE3CD;
+    color: #FFFFFF;
+    border-color: #6DE3CD;
+    filter: drop-shadow(0px 1px 1px #6DE3CD);
+  }
 
 .event-card-container{
     width: 20%;
     height: 55%;
-    background-color: rgb(181, 181, 181);
+    background-color: #6BEDFA;
 }
 
 .event-card-img{
