--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,12 @@
     border-radius: 45px;
     height: 100%;
     opacity: 80%;
+    
 }
 
 
 .nav--item{
+    cursor: grab;
 }
 
 .nav--item:hover{
@@ -53,28 +55,35 @@
     width: 100%;
     height: 600px;  
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    color: #FFFFFF;
+    color: #edf7fc;
     font-size: 26px;
 }
 
 .about-content{
-    width: 60%;
+    width: 70%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
 
 .bio{
-    width: 60%;
+    width: 55%;
+    height: 50%;
     font-size: 22px;
-    display: inline;
+    
 }
 
 .eszter-photo{
-    border-radius: 80%;
-    width: 40%;
-    float: right;
-    display: inline;
-    
+    width: 30%;
+    height: 50%;
+    border-radius: 100%;
+    shape-outside: circle();
+    float: left;
 }
 
 .event-results-container{
@@ -91,8 +100,11 @@
     width: 100%;
     height: 800px;  
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: #edf7fc;
+    font-size: 30px;
 }
 
 .contact-form{
@@ -101,35 +113,51 @@
     flex-direction: column;
     gap: 15px;
     align-items: center;
+    height: 60%;
+    color: #67BFF0;
+    padding-top: 10px;
 }
 
 .input-small{
-    width: 30%;
+    width: 50%;
     height: 30px;
+    background-color: #edf7fc;
+    color: #67BFF0;
+    outline: 3px solid #67BFF0;
+    border: none;
 }
 
 .input-large{
     width: 50%;
     height: 200px;
+    background-color: #edf7fc;
+    color: #67BFF0;
+    outline: 3px solid #67BFF0;
+    border: none;
+}
+
+.input-small::placeholder{
+    color: #67BFF0;
+}
+
+.input-large::placeholder{
+    color: #67BFF0;
 }
 
 .submit-btn {
-    height: 50px;
-    width: 200px;
-    background-color: white;
-    color: #6DE3CD;
-    border-color: #6DE3CD;
-    filter: drop-shadow(0px 1px 1px #6DE3CD);
-    color: #6DE3CD;
+    height: 10%;
+    width: 50%;
+    background-color: #edf7fc;
+    color: #67BFF0;
+    outline: 3px solid #67BFF0;
+    border: none;
     font-size: 18px;
   
   }
   
   .submit-btn:hover {
-    background-color: #6DE3CD;
-    color: #FFFFFF;
-    border-color: #6DE3CD;
-    filter: drop-shadow(0px 1px 1px #6DE3CD);
+    border: 2px solid #195d82;
+    cursor: grab;
   }
 
 .event-card-container{
