--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,7 @@
 .event-card-container{
     width: 20%;
     height: 55%;
-    background-color: #6BEDFA;
+    background-color: #67BFF0;
 }
 
 .event-card-img{
