--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-
-
-.nav--container{
+.nav--container {
     display: flex;
     align-items: center;
     position: fixed;
@@ -9,10 +7,10 @@
     justify-content: center;
     height: 75px;
     margin-top: 10px;
-    
+
 }
 
-.nav--items{
+.nav--items {
     display: flex;
     padding: 0px;
     background-color: #67F089;
@@ -24,20 +22,20 @@
     border-radius: 45px;
     height: 100%;
     opacity: 80%;
-    
+
 }
 
 
-.nav--item{
+.nav--item {
     cursor: grab;
 }
 
-.nav--item:hover{
+.nav--item:hover {
     text-decoration: underline 2px;
     text-underline-offset: 5px;
 }
 
-.header{
+.header {
     margin-top: 75px;
     display: flex;
     color: white;
@@ -45,15 +43,18 @@
     justify-content: center;
 }
 
-.home-container{
+.home-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 800px;  
-    background-image: url("../public/assets/home-banner.jpg");
+    height: 100%;
+
 }
 
-.about-container{
+.about-container {
     width: 100%;
-    height: 600px;  
+    height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -62,7 +63,7 @@
     font-size: 26px;
 }
 
-.about-content{
+.about-content {
     width: 70%;
     height: 100%;
     display: flex;
@@ -71,14 +72,14 @@
     gap: 10px;
 }
 
-.bio{
+.bio {
     width: 55%;
     height: 50%;
     font-size: 22px;
-    
+
 }
 
-.eszter-photo{
+.eszter-photo {
     width: 30%;
     height: 50%;
     border-radius: 100%;
@@ -86,9 +87,9 @@
     float: left;
 }
 
-.event-results-container{
+.event-results-container {
     width: 100%;
-    height: 800px;  
+    height: 800px;
     background-color: #FFFFFF;
     display: flex;
     gap: 20px;
@@ -96,9 +97,9 @@
     justify-content: center;
 }
 
-.contact-container{
+.contact-container {
     width: 100%;
-    height: 800px;  
+    height: 800px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -107,7 +108,7 @@
     font-size: 30px;
 }
 
-.contact-form{
+.contact-form {
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -118,7 +119,7 @@
     padding-top: 10px;
 }
 
-.input-small{
+.input-small {
     width: 50%;
     height: 30px;
     background-color: #edf7fc;
@@ -127,7 +128,7 @@
     border: none;
 }
 
-.input-large{
+.input-large {
     width: 50%;
     height: 200px;
     background-color: #edf7fc;
@@ -136,11 +137,11 @@
     border: none;
 }
 
-.input-small::placeholder{
+.input-small::placeholder {
     color: #67BFF0;
 }
 
-.input-large::placeholder{
+.input-large::placeholder {
     color: #67BFF0;
 }
 
@@ -152,25 +153,25 @@
     outline: 3px solid #67BFF0;
     border: none;
     font-size: 18px;
-  
-  }
-  
-  .submit-btn:hover {
+
+}
+
+.submit-btn:hover {
     border: 2px solid #195d82;
     cursor: grab;
-  }
+}
 
-.event-card-container{
+.event-card-container {
     width: 20%;
     height: 55%;
     background-color: #67BFF0;
 }
 
-.event-card-img{
+.event-card-img {
     width: 100%;
 }
 
-.event-text{
+.event-text {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -178,7 +179,149 @@
     text-align: center;
 }
 
-.event-name{
+.event-name {
     display: flex;
     gap: 10px;
+}
+
+.header-name {
+    font-size: 75px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+}
+
+.banner-image {
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width: 1050px) {
+    .header {
+        margin-top: 45px;
+        justify-content: center;
+        display: flex;
+        color: white;
+    }
+
+    .header-name {
+        font-size: 35px;
+    }
+
+    .nav--items {
+        width: 350px;
+        gap: 25px;
+        height: 80%;
+        font-size: 14px;
+    }
+
+    .eszter-photo {
+        width: 40%;
+        height: 60%;
+    }
+
+    .bio {
+        width: 60%;
+        height: 50%;
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .eszter-photo {
+        width: 40%;
+        height: 70%;
+    }
+
+    .bio {
+        width: 100%;
+        height: 50%;
+        font-size: 14px;
+    }
+}
+
+
+@media screen and (max-width: 500px) {
+    .header {
+        margin-top: 35px;
+        justify-content: center;
+        display: flex;
+        color: white;
+    }
+
+    .header-name {
+        font-size: 25px;
+    }
+
+    .banner-image {
+        height: 80%;
+    }
+
+    .nav--items {
+        display: flex;
+        padding: 0px;
+        background-color: #67F089;
+        width: 300px;
+        list-style-type: none;
+        gap: 15px;
+        align-items: center;
+        justify-content: center;
+        border-radius: 45px;
+        height: 60%;
+        opacity: 80%;
+        font-size: 12px;
+    }
+
+    .eszter-photo {
+        width: 30%;
+        height: 40%;
+    }
+
+    .bio {
+        font-size: 12px;
+    }
+
+}
+
+
+@media screen and (max-width: 375px) {
+    .header {
+        margin-top: 25px;
+        justify-content: center;
+        display: flex;
+        color: white;
+    }
+
+    .header-name {
+        font-size: 15px;
+    }
+
+    .banner-image {
+        height: 60%;
+    }
+
+    .nav--items {
+        width: 350px;
+        gap: 8px;
+        height: 60%;
+        font-size: 12px;
+    }
+
+
+    .nav--container {
+        display: flex;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        justify-content: center;
+        height: 75px;
+        margin-top: 10px;
+
+    }
+
+    .eszter-photo {
+        width: 70%;
+        height: 90%;
+    }
+
 }
