--- a/src/App.css
+++ b/src/App.css
@@ -7,22 +7,21 @@
     justify-content: center;
     height: 75px;
     margin-top: 10px;
-
 }
 
 .nav--items {
     display: flex;
     padding: 0px;
-    background-color: #67F089;
-    width: 400px;
+    width: 600px;
     list-style-type: none;
     gap: 30px;
     align-items: center;
     justify-content: center;
-    border-radius: 45px;
+    border-radius: 15px;
     height: 100%;
-    opacity: 80%;
-
+    opacity: 90%;
+    color: #FEF6ED;
+    background-color: #F1600D;
 }
 
 
@@ -33,14 +32,13 @@
 .nav--item:hover {
     text-decoration: underline 2px;
     text-underline-offset: 5px;
+    color: #1A265A;
 }
 
-.header {
-    margin-top: 75px;
-    display: flex;
-    color: white;
-    font-size: 36px;
-    justify-content: center;
+.nav--header{
+    color: #1A265A;
+    font-size: 26px;
+    font-weight: bold;
 }
 
 .home-container {
@@ -48,18 +46,18 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: 600px;
 
 }
 
 .about-container {
     width: 100%;
-    height: 100%;
+    height: 600px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    color: #edf7fc;
+    color: #FEF6ED;
     font-size: 26px;
 }
 
@@ -69,28 +67,26 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
 }
 
 .bio {
     width: 55%;
     height: 50%;
     font-size: 22px;
-
 }
 
 .eszter-photo {
     width: 30%;
     height: 50%;
-    border-radius: 100%;
+    border-radius: 50%;
     shape-outside: circle();
-    float: left;
 }
 
 .event-results-container {
     width: 100%;
     height: 800px;
-    background-color: #FFFFFF;
+    background-color: #FEF6ED;
     display: flex;
     gap: 20px;
     align-items: center;
@@ -104,7 +100,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: #edf7fc;
+    color: #F1600D;
     font-size: 30px;
 }
 
@@ -115,60 +111,62 @@
     gap: 15px;
     align-items: center;
     height: 60%;
-    color: #67BFF0;
     padding-top: 10px;
 }
 
 .input-small {
-    width: 50%;
+    width: 60%;
     height: 30px;
-    background-color: #edf7fc;
-    color: #67BFF0;
-    outline: 3px solid #67BFF0;
+    background-color: #FEF6ED;
+    color: #F1600D;
+    outline: 3px solid #F1600D;
     border: none;
 }
 
 .input-large {
-    width: 50%;
+    width: 60%;
     height: 200px;
-    background-color: #edf7fc;
-    color: #67BFF0;
-    outline: 3px solid #67BFF0;
+    background-color: #FEF6ED;
+    color: #F1600D;
+    outline: 3px solid #F1600D;
     border: none;
 }
 
 .input-small::placeholder {
-    color: #67BFF0;
+    color: #F1600D;
 }
 
 .input-large::placeholder {
-    color: #67BFF0;
+    color: #F1600D;
 }
 
 .submit-btn {
     height: 10%;
-    width: 50%;
-    background-color: #edf7fc;
-    color: #67BFF0;
-    outline: 3px solid #67BFF0;
+    width: 60%;
+    background-color: #FEF6ED;
+    color: #F1600D;
+    outline: 3px solid #F1600D;
     border: none;
     font-size: 18px;
 
 }
 
 .submit-btn:hover {
-    border: 2px solid #195d82;
+    background-color: #F1600D;
+    color: #FEF6ED;
     cursor: grab;
 }
 
 .event-card-container {
-    width: 20%;
+    width: 25%;
     height: 55%;
-    background-color: #67BFF0;
+    background-color: #F1600D;
+    color: #FEF6ED;
 }
 
 .event-card-img {
     width: 100%;
+    height: 40%;
 }
 
 .event-text {
@@ -177,17 +175,12 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    height: 60%;
 }
 
 .event-name {
     display: flex;
     gap: 10px;
-}
-
-.header-name {
-    font-size: 75px;
-    margin-top: 50px;
-    margin-bottom: 10px;
 }
 
 .banner-image {
@@ -196,27 +189,10 @@
 }
 
 @media screen and (max-width: 1050px) {
-    .header {
-        margin-top: 45px;
-        justify-content: center;
-        display: flex;
-        color: white;
-    }
-
-    .header-name {
-        font-size: 35px;
-    }
-
-    .nav--items {
-        width: 350px;
-        gap: 25px;
-        height: 80%;
-        font-size: 14px;
-    }
 
     .eszter-photo {
         width: 40%;
-        height: 60%;
+        height: 40%;
     }
 
     .bio {
@@ -224,12 +200,37 @@
         height: 50%;
         font-size: 18px;
     }
+
+    .event-name{
+        font-size: 12px;
+    }
+
+    .event-text{
+        font-size: 14px;
+    }
+
 }
 
 @media screen and (max-width: 700px) {
-    .eszter-photo {
-        width: 40%;
-        height: 70%;
+
+    .nav--items{
+        font-size: 14px;
+    }
+
+    .nav--header{
+        font-size: 20px;
+    }
+
+    .event-card-container{
+        height: 40%;
+    }
+
+    .event-name{
+        font-size: 9px;
+    }
+
+    .event-text{
+        font-size: 10px;
     }
 
     .bio {
@@ -241,38 +242,17 @@
 
 
 @media screen and (max-width: 500px) {
-    .header {
-        margin-top: 35px;
-        justify-content: center;
-        display: flex;
-        color: white;
+
+    .nav--items{
+        font-size: 14px;
     }
 
-    .header-name {
-        font-size: 25px;
-    }
-
-    .banner-image {
-        height: 80%;
-    }
-
-    .nav--items {
-        display: flex;
-        padding: 0px;
-        background-color: #67F089;
-        width: 300px;
-        list-style-type: none;
-        gap: 15px;
-        align-items: center;
-        justify-content: center;
-        border-radius: 45px;
-        height: 60%;
-        opacity: 80%;
-        font-size: 12px;
+    .nav--header{
+        font-size: 20px;
     }
 
     .eszter-photo {
-        width: 30%;
+        width: 50%;
         height: 40%;
     }
 
@@ -280,24 +260,18 @@
         font-size: 12px;
     }
 
+    .event-name{
+        font-size: 8px;
+    }
+
+    .event-text{
+        font-size: 10px;
+    }
+
 }
 
 
 @media screen and (max-width: 375px) {
-    .header {
-        margin-top: 25px;
-        justify-content: center;
-        display: flex;
-        color: white;
-    }
-
-    .header-name {
-        font-size: 15px;
-    }
-
-    .banner-image {
-        height: 60%;
-    }
 
     .nav--items {
         width: 350px;
